--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,7 @@ button {
     padding: 10px 0 10px 0;
     text-align: center;
     letter-spacing: 1px;
+    text-transform: uppercase;
 }
 
 p,
@@ -105,7 +106,7 @@ input[id="zip-code"] {
     width: 35%;
 }
 
-.contact-information {
+.information {
     display: flex;
     border-bottom: 2px solid #000;
     margin-bottom: 20px;
@@ -162,19 +163,19 @@ textarea{
     form {
         margin: auto;
         margin-top: 3px;
-        width: 60%;
-        max-width: 600px;
+        width: 50%;
+        max-width: 500px;
     }
 
-    .flex-wrapper {
+    .flex-wrapper{
         display: flex;
         flex-wrap: wrap;
-        align-items: center;
         flex-direction: column;
-    }
+        align-items: center;
+     }
 
     .contact {
-        width: 40%;
+        width: 30%;
         align-self: center;
     }
 
